--- a/public/stylesheets/darkTheme/darkSidebar.css
+++ b/public/stylesheets/darkTheme/darkSidebar.css
@@ -397,3 +397,11 @@
   font-size: 1.6rem;
   transition: 0.2s;
 }
+
+/* ----------------------- Responsive ----------------------- */
+
+@media only screen and (max-width: 500px) {
+  #sideBar {
+    display: none;
+  }
+}
