--- a/public/stylesheets/darkTheme/darktheme.css
+++ b/public/stylesheets/darkTheme/darktheme.css
@@ -34,7 +34,7 @@ html,
 body {
     height: 100%;
     width: 100%;
-    background-color: #2A2D36;
+    background-color: #1e1e1e;
 }
 
 #main #loader {
@@ -53,5 +53,23 @@ body {
 #main #loader img {
     height: 90%;
     border-radius: 50%;
+
+}
+
+/* ---------------------- Responsive ---------------------- */
+
+@media only screen and (max-width: 500px) {
+
+    :root {
+        --textColor: #fff;
+    }
+    
+    #main #loader {
+        align-items: center;
+    }
+    
+    #main #loader img {
+        height: 40%;
+    }
 
 }
